Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-66432

'this' behaves incorrect when called in a QML scope/context

XMLWordPrintable

    • 2f784a544ec4dccaa70ee1bcec71c8e6c2bd5d99

      The fix for QTBUG-59357 has a test that fails for 5.11, but in a different way than it did in 5.9. The 'this' object seems to be a plain (and quite empty) JavaScript object, and not the QML scope object. So the error is Cannot assign [undefined] to int.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            erikv Erik Verbruggen
            erikv Erik Verbruggen
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes